--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<link rel="stylesheet" type="text/css" href="style.css">
+			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
 			<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		</head>
 
 		<body>
+		<a href="portfolio.html">Portfolio</a>
 		<div style="padding:50px;">
 			<h1>JOE JOHNSON</h1>
 			<hr>
