--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<body>
 		<a href="portfolio.html">Portfolio</a>
 		<div style="padding:50px;">
-			<h1>JOE JOHNSON</h1>
+			<h1>CELIA CHUNG</h1>
 			<hr>
 
 			<h2>ABOUT ME</h2>
