--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
+	<head>
+		<title>My Portfolio</title>
+		<meta name=“description” content=“This is my portfolio” />
+		<meta name=“keywords” content=“portfolio, developer, designer” />
+		<meta name=“author” content=“Celia Chung” />
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	</head>
 
-</body>
+	<body>
+		<nav>
+			<div class="logo">
+				<a href="http://www.facebook.com">
+  				<img src="images/logo.gif" alt="Andy">
+</a>
+			</div>
+
+			<div class="links">
+				<ul>
+					<li class="test"><a href="index.html">Resume</a></li>
+					<li class="test"><a href="portfolio.html">Work</a></li>
+					<li class="test"><a href="#">About</a></li>
+				</ul>
+			</div>
+		</nav>
+
+		<!-- <p class="test22">Test</p> -->
+
+		<h1>Celia Chung</h1>
+
+		<p>Coding is super fun!</p>
+		
+		<div>	
+				<img src="images/edmund.jpg">
+				<br>
+		</div>
+
+		<div class="img1">
+			<a href="#"><img src="images/yogi.jpg"></a>
+		</div>
+			
+		<div class="img2">	
+			<a href="#"><img src="images/yogi.jpg"></a>
+		</div>
+			
+		<div class="img3">
+			<a href="#"><img src="images/yogi.jpg"></a>
+		</div>
+
+		<div class="img4">
+			<a href="#"><img src="images/yogi.jpg"></a>
+		</div>
+	</body>
 </html>
